# MentorDB

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
data/contracts/: faculty_profile.schema.json
data/samples/: demo_queries.md
deploy/: .env.example  api.Dockerfile  docker-compose.yml  nginx.conf  web.Dockerfile
docs/: deploy_cn_server.md  maintainers.md
scripts/: deploy.sh  dev.sh
skills/mentordb/: SKILL.md
skills/mentordb/agents/: openai.yaml
src/mentor_index/: __init__.py  __main__.py
src/mentor_index/adapters/: __init__.py  base.py  heuristic.py  registry.py  zju_control.py  zju_person.py
src/mentor_index/api/: __init__.py  app.py
src/mentor_index/cli/: __init__.py  formatting.py  main.py
src/mentor_index/collector/: __init__.py  service.py
src/mentor_index/core/: config.py  models.py  university_metadata.py  utils.py
src/mentor_index/crawl/: __init__.py  agent.py  browser.py
src/mentor_index/db/: __init__.py  models.py  repository.py  schema.sql
src/mentor_index/export/: __init__.py  service.py
src/mentor_index/extract/: __init__.py  agent.py  normalizer.py
src/mentor_index/index/: __init__.py  chunking.py  embeddings.py
src/mentor_index/providers/: __init__.py  embedding.py  (+1 more)
tests/: conftest.py  test_adapter_contract.py  test_agent_and_api.py  test_cleanup.py  test_cli_formatting.py  test_export.py  test_incremental_updates.py  test_normalizer.py  test_retrieval.py
web/: package.json
web/app/: globals.css  layout.tsx  page.tsx
web/lib/: api.ts  presentation.tsx
(+7 files in other folders)
