[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mentor-index"
version = "0.1.0"
description = "Open-source faculty crawling and retrieval system for graduate admissions research."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
  { name = "Open Source Maintainers" }
]
dependencies = [
  "beautifulsoup4>=4.12.3",
  "eval-type-backport>=0.2.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.3.4",
  "sentence-transformers>=3.0.1",
  "sqlalchemy>=2.0.32",
  "typer>=0.12.3",
  "uvicorn>=0.30.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
]
browser = [
  "playwright>=1.58.0",
]
pdf = [
  "pypdf>=4.3.1",
]

[project.scripts]
mentor-index = "mentor_index.cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
